--- a/FarmaGlobal-Test/src/main/resources/application.properties
+++ b/FarmaGlobal-Test/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
